--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   http: ^0.13.4
   google_fonts: ^3.0.1
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
