--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0-170.0.dev <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -21,6 +21,7 @@ dependencies:
   http: ^0.13.4
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
