preparation for adding 2 steps of dashboard management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   relative_scale: ^2.0.0
   spider: ^3.1.0
   expandable: ^5.0.1
+  state_machine: ^2.2.9
 
 dev_dependencies:
   flutter_test:
