--- a/android/local.properties
+++ b/android/local.properties
@@ -1,8 +1,8 @@
 sdk.dir=/home/dev/Android/Sdk
 flutter.sdk=/home/dev/snap/flutter/common/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
-flutter.minSdkVersion=32
+flutter.minSdkVersion=21
 flutter.targetSdkVersion=32
 flutter.compileSdkVersion=32
