--- a/android/local.properties
+++ b/android/local.properties
@@ -1,8 +1,8 @@
-sdk.dir=/Users/leviossa/Library/Android/sdk
-flutter.sdk=/Users/leviossa/flutter
-flutter.buildMode=debug
+sdk.dir=C:\\Users\\vladi\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.minSdkVersion=21
-flutter.targetSdkVersion=31
-flutter.compileSdkVersion=31
+flutter.targetSdkVersion=32
+flutter.compileSdkVersion=32
